// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can render Input Field render dark theme 1`] = `
<View
  collapsable={undefined}
  style={Object {}}
>
  <View
    collapsable={undefined}
    dark={true}
    error={false}
    errorVibrate={false}
    id="inputField"
    leftIcon={null}
    leftIconName="jbh-User_Profile"
    onChangeText={undefined}
    placeHolderText="Username"
    style={
      Array [
        Object {},
        Object {},
      ]
    }
    value="Demo"
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 0,
          },
          Object {
            "marginRight": 0,
          },
        ]
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "bottom": 2,
            "position": "absolute",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "System",
                "fontSize": 16,
              },
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 10,
              },
              false,
            ]
          }
          uppercase={false}
          virtual={undefined}
        >
          USERNAME
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        collapsable={undefined}
        editable={true}
        id="inputField"
        leftIconName="jbh-User_Profile"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#575757"
        selectionColor="#FFFFFF"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontSize": 17,
            "height": 50,
            "lineHeight": 24,
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Demo"
        virtual={undefined}
      />
    </View>
  </View>
</View>
`;

exports[`Can render Input Field render with error 1`] = `
<View
  collapsable={undefined}
  style={Object {}}
>
  <View
    collapsable={undefined}
    dark={false}
    error={true}
    errorVibrate={false}
    id="inputField"
    leftIcon={null}
    leftIconName="jbh-User_Profile"
    onChangeText={undefined}
    placeHolderText="Username"
    style={
      Array [
        Object {},
        Object {},
      ]
    }
    value="Demo"
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 0,
          },
          Object {
            "marginRight": 12,
          },
        ]
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "bottom": 2,
            "position": "absolute",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "System",
                "fontSize": 16,
              },
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 10,
              },
              Object {
                "color": "#007DBA",
              },
            ]
          }
          uppercase={false}
          virtual={undefined}
        >
          USERNAME
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        collapsable={undefined}
        editable={true}
        id="inputField"
        leftIconName="jbh-User_Profile"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#575757"
        selectionColor="#939393"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontSize": 17,
            "height": 50,
            "lineHeight": 24,
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Demo"
        virtual={undefined}
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "color": "#000",
              "fontSize": 30,
            },
            Object {
              "color": "#993A29",
            },
          ],
          Object {
            "fontFamily": "icomoon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
      virtual={undefined}
    >
      
    </Text>
  </View>
</View>
`;

exports[`Can render Input Field render with icon 1`] = `
<View
  collapsable={undefined}
  style={Object {}}
>
  <View
    collapsable={undefined}
    dark={false}
    error={false}
    errorVibrate={false}
    id="inputField"
    leftIcon={null}
    leftIconName="jbh-User_Profile"
    onChangeText={undefined}
    placeHolderText="Username"
    style={
      Array [
        Object {},
        Object {},
      ]
    }
    value={null}
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 0,
          },
          Object {
            "marginRight": 0,
          },
        ]
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "bottom": 2,
            "position": "absolute",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "System",
                "fontSize": 16,
              },
              Object {
                "fontFamily": "ProximaNova-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#939393",
              },
            ]
          }
          uppercase={false}
          virtual={undefined}
        >
          Username
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        collapsable={undefined}
        editable={true}
        id="inputField"
        leftIconName="jbh-User_Profile"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#575757"
        selectionColor="#939393"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontSize": 17,
            "height": 50,
            "lineHeight": 24,
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
        value={undefined}
        virtual={undefined}
      />
    </View>
  </View>
</View>
`;

exports[`Can render Input Field render with value and icon 1`] = `
<View
  collapsable={undefined}
  style={Object {}}
>
  <View
    collapsable={undefined}
    dark={false}
    error={false}
    errorVibrate={false}
    id="inputField"
    leftIcon={null}
    leftIconName="jbh-User_Profile"
    onChangeText={undefined}
    placeHolderText="Username"
    style={
      Array [
        Object {},
        Object {},
      ]
    }
    value="Demo"
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 0,
          },
          Object {
            "marginRight": 0,
          },
        ]
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "bottom": 2,
            "position": "absolute",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "System",
                "fontSize": 16,
              },
              Object {
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 10,
              },
              Object {
                "color": "#007DBA",
              },
            ]
          }
          uppercase={false}
          virtual={undefined}
        >
          USERNAME
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        collapsable={undefined}
        editable={true}
        id="inputField"
        leftIconName="jbh-User_Profile"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#575757"
        selectionColor="#939393"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontSize": 17,
            "height": 50,
            "lineHeight": 24,
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Demo"
        virtual={undefined}
      />
    </View>
  </View>
</View>
`;

exports[`Can render Input Field render without icon 1`] = `
<View
  collapsable={undefined}
  style={Object {}}
>
  <View
    collapsable={undefined}
    dark={false}
    error={false}
    errorVibrate={false}
    id="inputField"
    leftIcon={null}
    leftIconName={null}
    onChangeText={undefined}
    placeHolderText="Username"
    style={
      Array [
        Object {},
        Object {},
      ]
    }
    value={null}
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 0,
          },
          Object {
            "marginRight": 0,
          },
        ]
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "bottom": 2,
            "position": "absolute",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#000",
                "fontFamily": "System",
                "fontSize": 16,
              },
              Object {
                "fontFamily": "ProximaNova-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#939393",
              },
            ]
          }
          uppercase={false}
          virtual={undefined}
        >
          Username
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        collapsable={undefined}
        editable={true}
        id="inputField"
        leftIconName={null}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#575757"
        selectionColor="#939393"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontSize": 17,
            "height": 50,
            "lineHeight": 24,
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
        underlineColorAndroid="rgba(0,0,0,0)"
        value={undefined}
        virtual={undefined}
      />
    </View>
  </View>
</View>
`;
